--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,13 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/goal/goal-dialog.controller.js"></script>
+    <script src="app/entities/goal/goal-detail.controller.js"></script>
+    <script src="app/entities/goal/goal-delete-dialog.controller.js"></script>
+    <script src="app/entities/goal/goal.state.js"></script>
+    <script src="app/entities/goal/goal.service.js"></script>
+    <script src="app/entities/goal/goal.search.service.js"></script>
+    <script src="app/entities/goal/goal.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
